now starts the node.js process (bot) using the button and closes it upon app quit

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 *.userprefs
 
 #Assets that are not yet confirmed
-ProjectCardDice/assets/ignore
+Discord Butler Bot UI/assets/ignore
 
 # Build results
 [Dd]ebug/
