--- a/Discord Butler Bot UI/Discord Butler Bot UI.csproj
+++ b/Discord Butler Bot UI/Discord Butler Bot UI.csproj
@@ -10,11 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="assets\start_bot.bat" />
+    <None Remove="Assets\start_bot.bat" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="assets\start_bot.bat">
+    <Content Include="Assets\start_bot.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
